Embedded mermaid js to each post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -90,6 +90,8 @@ layout: default
         </div>
     </div>
 </div>
+
+<script src="/assets/js/mermaid.js"></script>
 <script>
 /**
  * target _blank
