--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,6 +28,10 @@ layout: default
             {% include tag.html %}
             </div>
 
+            <div class="label-card">
+               {% include reading-time.html %}
+            </div>
+
         </div>
         <hr>
         <article itemscope itemtype="http://schema.org/BlogPosting">
