--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,9 @@ layout: default
     <div class="left">
         <h1>{{page.title}}</h1>
         <div class="label">
+            <div class="label-card">
+               <i class="fa fa-clock-o"></i>{% include reading-time.html %}
+            </div>
 
             <div class="label-card">
                 <i class="fa fa-calendar"></i>{{ page.date | date: "%F" }}
@@ -28,9 +31,7 @@ layout: default
             {% include tag.html %}
             </div>
 
-            <div class="label-card">
-               {% include reading-time.html %}
-            </div>
+
 
         </div>
         <hr>
